--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "postinstall-postinstall": "^2.1.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-icons": "^5.5.0",
     "react-scroll-parallax": "^3.4.5"
   },
   "devDependencies": {
